<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context=".billboardFragment">


    <TextView
        android:id="@+id/textView2"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/title_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="BILLBOARD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/min_gap"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:backgroundTint="@color/cardLayout"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:cardCornerRadius="@dimen/min_gap"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/harry_potter" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_movie_title"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/hp_calification_text_view"
                    android:textAlignment="textStart"
                    android:textColor="@color/calification"
                    android:textSize="32sp" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_card2"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/cardLayout"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_image2"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/star_wars" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/medium_gap">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie2_title"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sw_calification"
                    android:textAlignment="textStart"
                    android:textColor="@color/calification"
                    android:textSize="32sp" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actionButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttonColor"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>